fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,9 @@ canvas{
 }
 
 p{
+    font-weight:500;
     font-size:10px;
     font-family: monospace, monospace;
     width: 1000px;
+    white-space: pre-wrap;
 }
